zmena post na delete, uprava chatu FE

--- a/backend/public/.htaccess
+++ b/backend/public/.htaccess
@@ -21,3 +21,7 @@
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteRule ^ index.php [QSA,L]
 </IfModule>
+
+<Limit GET POST PUT DELETE OPTIONS>
+  Allow from all
+</Limit>
